# amazon-bedrock-agentcore-samples

02-use-cases/A2A-multi-agent-incident-response/frontend/: package-lock.json  package.json
02-use-cases/A2A-multi-agent-incident-response/host_adk_agentclaude/: .dockerignore  Dockerfile  agent.py  main.py  pyproject.toml  requirements.txt  utils.py
02-use-cases/A2A-multi-agent-incident-response/host_adk_agentclaude/prompt/: __init__.py
02-use-cases/A2A-multi-agent-incident-response/host_adk_agentclaude/scripts/: get_m2m_token.py
02-use-cases/A2A-multi-agent-incident-response/web_search_openai_agentsclaude/: .dockerignore  agent.py  agent_executor.py  main.py  memory_tool.py  pyproject.toml  requirements.txt  tools.py
02-use-cases/A2A-multi-agent-incident-response/web_search_openai_agentsclaude/prompt/: __init__.py
02-use-cases/A2A-multi-agent-incident-response/web_search_openai_agentsclaude/scripts/: get_m2m_token.py  utils.py
02-use-cases/A2A-realestate-agentcore-multiagents/ui/: package-lock.json
02-use-cases/customer-support-assistant-vpc/frontend/: package-lock.json
02-use-cases/finance-personal-assistant/: requirements.txt
02-use-cases/healthcare-appointment-agent/: requirements.txt
02-use-cases/lakehouse-agent/: .env.example  .gitignore  01-deploy-cognito.ipynb  02-deploy-iam-roles.ipynb  03-deploy-s3tables.ipynb  04-deploy-mcp-server.ipynb  05-deploy-gateway.ipynb  06-deploy-agent.ipynb  07-streamlit-ui.ipynb  08-optional-cleanup.ipynb  README.md  scenarios.md
05-blueprints/multitenant-agentic-platform/: README.md  cleanup.sh  deploy.sh
(+119 files in other folders)
