[project]
name = "web-search-claude-agent"
version = "0.1.0"
description = "Web Search using Strands SDK with Claude on AgentCore Runtime"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk>=0.3.8",
    "bedrock-agentcore>=0.1.7",
    "strands-agents>=1.16.0",
    "tavily-python>=0.7.12",
    "uvicorn>=0.37.0",
]
